Fixed bug for input on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,11 @@ ul {
     width: 13rem;
 }
 
+input[type='text'],
+.form-control {
+    font-size: 16px;
+}
+
 .button-wrapper {
     grid-column-start: 2;
     grid-row-start: 5;
